tests/macro-tests/cases/widget_new/incorrect_arg_type3.stderr
error[E0277]: the trait bound `bool: IntoVar<GradientStops>` is not satisfied
  --> cases/widget_new/incorrect_arg_type3.rs:10:40
   |
10 |         background_gradient = 0.deg(), true;
   |         -------------------            ^^^^ the trait `IntoVar<GradientStops>` is not implemented for `bool`
   |         |
   |         required by a bound introduced by this call
   |
   = note: `IntoVar<T>` is implemented for all `T: VarValue`
   = note: `IntoVar<T>` is implemented for `Var<T>`, `ContextVar<T>` and others
   = help: the following other types implement trait `IntoVar<T>`:
            <implementers-list>
note: required by a bound in `zng::widget::background_gradient::background_gradient`
  --> $WORKSPACE/crates/zng-wgt-fill/src/lib.rs
   |
   | pub fn background_gradient(child: impl IntoUiNode, axis: impl IntoVar<LinearGradientAxis>, stops: impl IntoVar<GradientStops>) -> UiNode {
   |                                                                                                        ^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `background_gradient::background_gradient`
